ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc14, 4.7.0
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Execution Team 2020-06-29, Execution Team 2020-07-13
    • 6
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The documentation says: "Collection names should begin with an underscore or a letter character". But looks like it is not enforced. I think we should either disallow creating collection with such names or avoid crashing the secondary oplog application.

            Assignee:
            Eric Milkie
            Reporter:
            Lingzhi Deng
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: