SERVER-48628 sort oplog entries first in applier batches, for create ops in transactions

(cherry picked from commit 13d756e1645f3d41439f336d2312777dd0cb1999)